--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_generative_ai: ^0.4.6
   flutter_dotenv: ^5.2.1
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
